--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "@material-ui/core": "latest",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
-    "aos": "^3.0.0-beta.6",
     "clsx": "latest",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "html-to-draftjs": "^1.5.0",
+    "immutable": "^4.0.0-rc.12",
     "next": "latest",
     "prop-types": "latest",
     "react": "latest",
